# yxTPU

./: .gitignore  AGENTS.md  EXPERIMENTS.md  README.md
benchmarks/: README.md  (+25 more)
pretraining/: MAXTEXT_PIN  README.md  pyproject.toml
pretraining/benchmarks/: benchmark_pallas_kda_folded.py  benchmark_pallas_kda_fused.py  diagnose_real_batch_gradients.py  diagnose_wy_conditioning.py  kda_fused_experimental.py  summarize_trace_categories.py  summarize_xplane_categories.py  verify_causal_depthwise_conv.py  verify_fused_linear_cross_entropy.py
pretraining/configs/data/: climbmix.yml  climbmix_superbpe.yml  grain.yml  huggingface.yml  synthetic.yml
pretraining/configs/experiments/: climbmix_10b.yml  max_throughput.yml  selected.yml  sequence_sweep.yml  superbpe_1b.yml  superbpe_50b.yml  superbpe_smoke.yml
pretraining/configs/hardware/: v4-32.yml  v4-64.yml  v5e-16.yml  v5e-64.yml  v6e-16.yml  v6e-32.yml  v6e-64.yml  v6e-8.yml
pretraining/configs/models/: gqa_rope_128k.yml  kda_hybrid_128k.yml  kda_hybrid_273m.yml  kda_hybrid_309m_gpt2.yml
pretraining/configs/optimizers/: adamw.yml  adamw_10b.yml  muon.yml  muonclip.yml
pretraining/scripts/: doctor_profiles.sh  launch_climbmix_10b.sh  launch_existing_tpu.sh  setup.sh  smoke_optimizers.sh
pretraining/src/yxtpu_pretrain/: __init__.py  cli.py  config.py  legacy_parity.py  model.py  train.py
pretraining/tests/: test_config.py  test_data_checkpoint.py  test_evaluation_metrics.py  test_kimi_delta_attention.py  test_linear_cross_entropy.py  test_model.py  test_optimizers.py  test_sft_data.py  test_sft_tokens.py
(+224 files in other folders)
